--- a/frontend/src/components/movies/moviesCard/MoviesCard.css
+++ b/frontend/src/components/movies/moviesCard/MoviesCard.css
@@ -1,18 +1,23 @@
 .moviesCard {
+  width: 100%;
+  max-height: 134px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  gap: 20px;
   background-color: #2F2F2F;
   padding: 6px 6px 6px 22px;
   box-sizing: border-box;
 }
 
 .moviesCard__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 16px 0;
-  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-areas:
+    'title'
+    'duration'
+    'like';
+    max-height: 122px;
 }
 
 .moviesCard__title {
@@ -21,6 +26,13 @@
   line-height: 22px;
   color: #FFFFFF;
   margin: 0;
+  margin-top: 15px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  text-align: start;
+  max-height: 44px;
+  grid-area: 'title';
 }
 
 .moviesCard__duration {
@@ -30,19 +42,29 @@
   display: flex;
   align-items: center;
   color: #8B8B8B;
+  grid-area: 'duration';
+  margin: 0;
+  align-self: normal;
+  margin-bottom: 5px;
 }
 
 .moviesCard__like {
   width: 14px;
   height: 12px;
-  background-image: url(../../../images/like_icon.png);
+  background-image: url(../../../images/like_icon.svg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-size: cover;
   border: 0;
   background-color: #2F2F2F;
-  margin-top: 21px;
+  grid-area: 'like';
+  align-self: start;
+  margin-top: 10px;
+}
+
+.moviesCard__like_delete {
+  background-image: url(../../../images/delete_icon.svg);
 }
 
 .moviesCard__like:hover {
@@ -60,10 +82,21 @@
   object-fit: cover;
 }
 
-@media (max-width:460px) {
+@media (max-width: 600px) {
   .moviesCard {
     flex-direction: column-reverse;
     padding: 0;
+    padding-bottom: 8px;
+    max-height: fit-content;
+  }
+
+  .moviesCard__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-template-areas:
+      'title' 'like'
+      'duration';
   }
 
   .moviesCard__poster {
@@ -77,24 +110,20 @@
     line-height: 15px;
     min-width: 258px;
     text-align: start;
-  }
-
-  .moviesCard__container {
-    position: relative;
-    padding: 14px 12px 2px;
-    height: 48px;
-    flex-direction: row;
-    flex-wrap: wrap;
+    margin-left: 12px;
+    margin-top: -8px;
   }
 
   .moviesCard__like {
-    order: 2;
-    margin-top: 2px;
+    justify-self: end;
+    margin-right: 20px;
+    margin-top: -6px;
   }
 
   .moviesCard__duration {
-    margin-top: 8px;
+    margin-top: -1px;
     max-width: 228px;
     order: 3;
+    margin-left: 12px;
   }
 }
