--- a/frontend/src/components/movies/searchForm/SearchForm.css
+++ b/frontend/src/components/movies/searchForm/SearchForm.css
@@ -8,10 +8,9 @@
 
 .search-form__container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
   width: 100%;
 }
 
@@ -65,6 +64,11 @@
   gap: 25px;
 }
 
+.search-form__checkbox-container:hover {
+  opacity: .8;
+  
+}
+
 .search-form__checkbox {
   display: none;
 }
@@ -107,6 +111,8 @@
   .search-form__checkbox-container {
     flex-direction: row-reverse;
     gap: 16px;
+    align-self: flex-end;
+    margin-right: 12px;
   }
 
 }
