--- a/frontend/src/components/movies/searchForm/SearchForm.css
+++ b/frontend/src/components/movies/searchForm/SearchForm.css
@@ -35,7 +35,7 @@
 
 .search-form__input:focus {
   outline: none;
-  transform: scale(1.1);
+  box-shadow: 0 0 5px #4285F4;
 }
 
 .search-form__button {
