--- a/frontend/src/components/profile/Profile.css
+++ b/frontend/src/components/profile/Profile.css
@@ -64,7 +64,7 @@
   text-align: start;
 }
 
-.profile__button-submit {
+.profile__button-edit {
   border: 0;
   background-color: #202020;
   font-weight: 400;
@@ -75,6 +75,29 @@
   text-align: center;
   color: #FFFFFF;
   margin-top: 204px;
+}
+
+.profile__button-save {
+  border: 0;
+  background-color: #3456F3;
+  border-radius: 3px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #FFFFFF;
+  margin-top: 20px;
+  width: 100%;
+  max-width: 410px;
+  height: 45px;
+}
+
+.profile__button-save:hover {
+  opacity: .8;
+  cursor: pointer;
 }
 
 .profile__button-exit {
@@ -88,7 +111,11 @@
   margin-top: 15px;
 }
 
-.profile__button-submit:hover,
+.profile__button-exit_invisible {
+  display: none;
+}
+
+.profile__button-edit:hover,
 .profile__button-exit:hover {
   cursor: pointer;
   opacity: .7;
@@ -100,7 +127,19 @@
   font-size: 10px;
   text-align: start;
   min-width: 100%;
-  height: 12px;
+  min-height: 12px;
+}
+
+.profile__submit-error_invisible {
+  visibility: hidden;
+}
+
+.profile__submit-error {
+  color: #FF004C;
+  text-align: center;
+  font-size: 11px;
+  font-weight: 400;
+  margin-top: 184px;
 }
 
 .profile__input:focus {
@@ -121,7 +160,7 @@
     margin-bottom: 96px;
   }
 
-  .profile__button-submit {
+  .profile__button-edit {
     margin-top: 196px;
   }
 }
@@ -135,11 +174,11 @@
     margin-bottom: 81px;
   }
 
-  .profile__input { 
+  .profile__input {
     width: 78%;
   }
 
-  .profile__button-submit {
+  .profile__button-edit {
     margin-top: 376px;
     font-size: 12px;
     line-height: 15px;
