--- a/frontend/src/components/burgerMenu/BurgerMenu.css
+++ b/frontend/src/components/burgerMenu/BurgerMenu.css
@@ -89,9 +89,9 @@
   background-color: #313131;
   border-radius: 50px;
   background-image: url(../../images/header__account-logo.svg);
-  background-size: cover;
   background-repeat: no-repeat;
-  background-position: center -2px;
+  background-size: 10px 10px;
+  background-position: center;
 }
 
 .burger-menu__account-info:hover {
