--- a/frontend/src/components/burgerMenu/BurgerMenu.css
+++ b/frontend/src/components/burgerMenu/BurgerMenu.css
@@ -14,6 +14,16 @@
   box-sizing: border-box;
 }
 
+.burger-menu__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 9998;
+}
+
 .burger-menu_none {
   display: none;
 }
