--- a/frontend/src/components/profile/Profile.css
+++ b/frontend/src/components/profile/Profile.css
@@ -95,6 +95,14 @@
   height: 45px;
 }
 
+.profile__button-save:disabled {
+  opacity: 0.2;
+}
+
+.profile__button-save:disabled:hover {
+  cursor: not-allowed;
+}
+
 .profile__button-save:hover {
   opacity: .8;
   cursor: pointer;
