--- a/frontend/src/components/movies/Movies.css
+++ b/frontend/src/components/movies/Movies.css
@@ -1,4 +1,11 @@
+/* временное решение ;) */
+.main {
+  min-height: 75vh;
+}
+.error-message,
 .empty-result {
-  color: white;
-  line-height: 24px;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 34px;
+  color: #8B8B8B;
 }
