--- a/frontend/src/components/movies/searchForm/SearchForm.css
+++ b/frontend/src/components/movies/searchForm/SearchForm.css
@@ -103,6 +103,19 @@
   margin-top: 1px;
 }
 
+.search-form__error {
+  display: inline-block;
+  color: #EE3465;
+  font-size: 10px;
+  text-align: start;
+  min-width: 100%;
+  min-height: 16px;
+}
+
+.search-form__fetch-error_invisible {
+  visibility: hidden;
+}
+
 @media (max-width: 768px) {
   .search-form {
     padding: 78px 30px 0;
